# Polygon_type_traits

./: CMakeLists.txt  README.md  builChatGPT.bat  build_clang.bat  build_gcc.bat  builtChatGPT.bat
cmake/: Includes.cmake  Libs.cmake  MyCMakeScript.cmake  ProjectConfig.cmake
include/: color_output.hpp  umbrella_header.hpp
include/testers/: is_nothrow_tester.hpp  layout_and_special_members_tester.hpp  sizeof_and_alignof.hpp  standard_layout_tester.hpp  triviality_tester.hpp  triviality_tester_new.hpp  type_names_tester.hpp  type_properties_tester.hpp  value_category_tester.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  test_class_object_layout.cpp  test_exception_specification.cpp  test_layout_and_special_members.cpp  test_triviality.cpp  test_type_properties.cpp  test_value_category.cpp
src/cmake/: Sources.cmake
